2002-09-16  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/misc.c:
	fixed compilation with --enable-command-log; simplified fvwm_msg()

	* libs/Module.c:
	reformatted; don't send end-of-line with SET_*MASK

2002-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/borders.c (border_draw_multi_pixmap_titlebar):
	fixed multipixmap title drawing

	* fvwm/frame.h (struct):
	* fvwm/frame.c (frame_get_titlebar_dimensions):
	removed unused code

	* fvwm/events.c (HandlePropertyNotify):
	applied FlocaleGetNameProperty core dump fix by Suzanne Skinner

	* libs/Fft.c (FftDrawString):
	-Wall fix when compiling w/o Xft

2002-09-15  olicha  <olivier.chapuis@free.fr>

	* libs/Colorset.c (CreateBackgroundPixmap):
	Fixed a dpy problem with FvwmBacker
	* libs/Colorset.c (CreateBackgroundPixmap):
	Fixed creation a root transparent pixmap for small root pixmap

2002-09-14  olicha  <olivier.chapuis@free.fr>

	* libs/Fft.c (FftDrawString):
	Fixed clip region with shadow font

	* libs/PictureGraphics.c (PGraphicsCreateTranslucent):
	Added a function to create translucent pixmaps
	* libs/Colorset.c (CreateBackgroundPixmap):
	A small fix
	* libs/FRender.c (FRenderRender):
	Allows to use the root window as src pixmap

2002-09-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	Fixed open double quotes in ButtonState section

2002-09-13  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/fvwm.1.in: Add -cmd module timeout information.

2002-09-13  olicha  <olivier.chapuis@free.fr>

	* libs/Colorset.c (CreateBackgroundPixmap):
	(UpdateBackgroundTransparency):
	(SetRectangleBackground):
	* libs/Colorset.h:
	* fvwm/colorset.c (*):
	* fvwm/colorset.h:
	* fvwm/events.c (HandlePropertyNotify):
	Starting implementation of RootTransparent colorset. Worked on
	tinted Transparent colorset. Various colorset parsing fixes.

	* libs/Fft.c (FftDrawString):
	* libs/Flocale.h:
	Added the possibility to draw with a clipping region.

	* libs/FRender.c (FRenderRender):