@@ -1,3 +1,8 @@
+2002-09-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* configure.in:
+	refuse to run configure if CFLAGS is not empty
+
 2002-09-16  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/misc.c:
